[gd_scene load_steps=7 format=3 uid="uid://cf75oec64jiql"]

[ext_resource type="Script" uid="uid://dvtcwfux2taok" path="res://scenes/dynamic/interactables/cherrymen/cherrymen.gd" id="1_g5y2u"]
[ext_resource type="Texture2D" uid="uid://cbnxsdeyoo6cq" path="res://assets/background&art/cherrymen1.png" id="1_mflt7"]
[ext_resource type="Texture2D" uid="uid://bkt0xwhj1ojjd" path="res://assets/background&art/cherrymen2.png" id="2_g5y2u"]
[ext_resource type="Texture2D" uid="uid://cuu31o5qyc4lf" path="res://assets/background&art/cherrymen3.png" id="3_wgvkq"]

[sub_resource type="SpriteFrames" id="SpriteFrames_qloay"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_mflt7")
}, {
"duration": 1.0,
"texture": ExtResource("2_g5y2u")
}, {
"duration": 1.0,
"texture": ExtResource("3_wgvkq")
}],
"loop": true,
"name": &"floating",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kgum2"]
size = Vector2(65, 58)

[node name="Cherrymen" type="Area2D"]
script = ExtResource("1_g5y2u")

[node name="AnimatedSprite" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_qloay")
animation = &"floating"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-0.5, 6)
shape = SubResource("RectangleShape2D_kgum2")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
